--- a/src/main/resources/templates/Avaliacao/FormAvaliacao.html
+++ b/src/main/resources/templates/Avaliacao/FormAvaliacao.html
@@ -62,121 +62,138 @@
                                     <div class="col-2">
                                         <div class="form-group">
                                             <label for="peitoral">Peitoral:</label>
-                                            <input type="text" name="peitoral"
+                                            <input type="text" name="peitoral" placeholder="peitoral"
                                                 class="number form form-control border" />
                                         </div>
                                     </div>
                                     <div class="col-2">
-                                        <label for="idade">Auxilar Média:</label>
+                                        <label for="mediaAuxiliar">Auxilar Média:</label>
                                         <input id="mediaAuxiliar" type="text" name="mediaAuxiliar"
+                                            placeholder="auxilar média" class="number form form-control border" />
+                                    </div>
+                                    <div class="col-2">
+                                        <label for="subEscapular">Sub Escapular:</label>
+                                        <input type="text" name="subEscapular" id="subEscapular"
+                                            class=" number form form-control border" placeholder="sub espacular" />
+                                    </div>
+                                    <div class="col-2">
+                                        <label for="tricipital">Tricipital:</label>
+                                        <input type="text" name="tricipital" placeholder="tricipital"
                                             class="number form form-control border" />
                                     </div>
                                     <div class="col-2">
-                                        <label for="massa">Peso:</label>
-                                        <input type="text" name="massa" id="massa"
-                                            class=" number form form-control border" placeholder="Peso" />
-                                    </div>
-                                    <div class="col-2">
-                                        <label for="estatura">Estatura:</label>
-                                        <input type="text" name="estatura" placeholder="Estatura"
+                                        <label for="biciptal">Biciptal:</label>
+                                        <input type="text" name="biciptal" placeholder="biciptal"
                                             class="number form form-control border" />
                                     </div>
                                     <div class="col-2">
-                                        <label for="estatura">Estatura:</label>
-                                        <input type="text" name="estatura" placeholder="Estatura"
-                                            class="number form form-control border" />
-                                    </div>
-                                    <div class="col-2">
-                                        <label for="estatura">Estatura:</label>
-                                        <input type="text" name="estatura" placeholder="Estatura"
+                                        <label for="supraIliaca">SupraIliaca:</label>
+                                        <input type="text" name="supraIliaca" placeholder="supraIliaca"
                                             class="number form form-control border" />
                                     </div>
                                 </div>
-                                <div class="contaier-center"></div>
+                                <hr />
                                 <div class="row">
                                     <div class="col-4 justify-content-md-center">
-                                        <label for="estatura">Estatura:</label>
-                                        <input type="text" name="estatura" placeholder="Estatura"
+                                        <label for="abdominalDobra">Abdominal Dobra:</label>
+                                        <input type="text" name="abdominalDobra" placeholder="abdominal Dobra"
                                             class="number form form-control border" />
                                     </div>
                                     <div class="col-4 col-centered">
-                                        <label for="estatura">Estatura:</label>
-                                        <input type="text" name="estatura" placeholder="Estatura"
+                                        <label for="coxa">Coxa:</label>
+                                        <input type="text" name="coxa" placeholder="coxa"
                                             class="number form form-control border" />
                                     </div>
                                     <div class="col-4 justify-content-md-center">
-                                        <label for="estatura">Estatura:</label>
-                                        <input type="text" name="estatura" placeholder="Estatura"
+                                        <label for="panturrilha">Panturrilha:</label>
+                                        <input type="text" name="panturrilha" placeholder="panturrilha"
                                             class="number cent form form-control border" />
                                     </div>
                                 </div>
-
                             </div>
-
-                            
                         </div>
 
                         <div class="card ">
-                                <div class="card-header"> Dobras </div>
-    
-                                <div class="card-body">
-                                    <div class="row">
-                                        <div class="col-2">
-                                            <div class="form-group">
-                                                <label for="peitoral">Peitoral:</label>
-                                                <input type="text" name="peitoral"
-                                                    class="number form form-control border" />
-                                            </div>
-                                        </div>
-                                        <div class="col-2">
-                                            <label for="idade">Auxilar Média:</label>
-                                            <input id="mediaAuxiliar" type="text" name="mediaAuxiliar"
-                                                class="number form form-control border" />
-                                        </div>
-                                        <div class="col-2">
-                                            <label for="massa">Peso:</label>
-                                            <input type="text" name="massa" id="massa"
-                                                class=" number form form-control border" placeholder="Peso" />
-                                        </div>
-                                        <div class="col-2">
-                                            <label for="estatura">Estatura:</label>
-                                            <input type="text" name="estatura" placeholder="Estatura"
-                                                class="number form form-control border" />
-                                        </div>
-                                        <div class="col-2">
-                                            <label for="estatura">Estatura:</label>
-                                            <input type="text" name="estatura" placeholder="Estatura"
-                                                class="number form form-control border" />
-                                        </div>
-                                        <div class="col-2">
-                                            <label for="estatura">Estatura:</label>
-                                            <input type="text" name="estatura" placeholder="Estatura"
+                            <div class="card-header"> Perimetros </div>
+
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-3">
+                                        <div class="form-group">
+                                            <label for="torax">Torax:</label>
+                                            <input type="text" name="torax" placeholder="torax"
                                                 class="number form form-control border" />
                                         </div>
                                     </div>
-                                    <div class="contaier-center"></div>
-                                    <div class="row">
-                                        <div class="col-4 justify-content-md-center">
-                                            <label for="estatura">Estatura:</label>
-                                            <input type="text" name="estatura" placeholder="Estatura"
-                                                class="number form form-control border" />
-                                        </div>
-                                        <div class="col-4 col-centered">
-                                            <label for="estatura">Estatura:</label>
-                                            <input type="text" name="estatura" placeholder="Estatura"
-                                                class="number form form-control border" />
-                                        </div>
-                                        <div class="col-4 justify-content-md-center">
-                                            <label for="estatura">Estatura:</label>
-                                            <input type="text" name="estatura" placeholder="Estatura"
-                                                class="number cent form form-control border" />
-                                        </div>
+                                    <div class="col-3">
+                                        <label for="bracoDireito">Braço Direito</label>
+                                        <input id="bracoDireito" type="text" name="bracoDireito"
+                                            placeholder="braço direito" class="number form form-control border" />
                                     </div>
-    
+                                    <div class="col-3">
+                                        <label for="bracoEsquerdo">Braço Esquerdo:</label>
+                                        <input type="text" name="bracoEsquerdo" id="bracoEsquerdo"
+                                            class=" number form form-control border" placeholder="braço esquerdo" />
+                                    </div>
+
+                                    <div class="col-3 justify-content-md-center">
+                                        <label for="antebracoEsquerdo">Antebraço Esquerdo:</label>
+                                        <input type="text" name="antebracoEsquerdo" placeholder="antebraço esquerdo"
+                                            class="number form form-control border" />
+                                    </div>
+
                                 </div>
-    
-                                
+                                <hr />
+                                <div class="row">
+                                    <div class="col-3 col-centered">
+                                        <label for="abdominalPerimetro">Abdominal Perimetro:</label>
+                                        <input type="text" name="abdominalPerimetro" placeholder="abdominal"
+                                            class="number form form-control border" />
+                                    </div>
+                                    <div class="col-3 justify-content-md-center">
+                                        <label for="cintura">Cintura:</label>
+                                        <input type="text" name="cintura" placeholder="cintura"
+                                            class="number cent form form-control border" />
+                                    </div>
+                                    <div class="col-3 justify-content-md-center">
+                                        <label for="quadril">Quadril:</label>
+                                        <input type="text" name="quadril" placeholder="quadril"
+                                            class="number cent form form-control border" />
+                                    </div>
+                                    <div class="col-3 justify-content-md-center">
+                                        <label for="coxaDireita">Coxa Direita:</label>
+                                        <input type="text" name="coxaDireita" placeholder="coxa direita"
+                                            class="number cent form form-control border" />
+                                    </div>
+                                </div>
+                                <hr />
+                                <div class="row">
+                                    <div class="col-4 justify-content-md-center">
+                                        <label for="coxaEsquerda">Coxa Esquerda:</label>
+                                        <input type="text" name="coxaEsquerda" placeholder="coxa esquerda"
+                                            class="number cent form form-control border" />
+                                    </div>
+                                    <div class="col-4">
+                                        <label for="pernaDireita">Perna Direita:</label>
+                                        <input type="text" name="pernaDireita" placeholder="perna direita"
+                                            class="number form form-control border" />
+                                    </div>
+                                    <div class="col-4">
+                                        <label for="pernaEsquerda">Perna Esquerda:</label>
+                                        <input type="text" name="pernaEsquerda" placeholder="perna esquerda"
+                                            class="number form form-control border" />
+                                    </div>
+                                </div>
                             </div>
+
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <center>
+                                    <button type="submit" class="btn btn-success" style="margin: 10px">Realizar Avaliação</button>
+                                </center>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
