--- a/src/main/resources/templates/Avaliacao/FormAvaliacao.html
+++ b/src/main/resources/templates/Avaliacao/FormAvaliacao.html
@@ -22,32 +22,87 @@
                 <nav th:replace="Fragments/topnav :: topnav"></nav>
 
                 <div class="container-fluid">
-                    <form action="" th:object="${aluno}">
+
+                    <div class="row">
+                        <div class="col-xl-6 col-md-6 mb-4 col-sm-6">
+                            <div class="card border-left-primary shadow h-100 py-2">
+                                <div class="card-body">
+                                    <div class="row no-gutters align-items-center">
+                                        <div class="col mr-2">
+                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                                Aluno</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800"><span
+                                                    th:text="${aluno.nome}"></span></div>
+                                        </div>
+                                        <div class="col-auto">
+                                            <i class="fas fa-user fa-2x text-gray-300"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-xl-3 col-md-6 mb-4">
+                            <div class="card border-left-success shadow h-100 py-2">
+                                <div class="card-body">
+                                    <div class="row no-gutters align-items-center">
+                                        <div class="col mr-2">
+                                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                                Data de Nascimento</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800"><span
+                                                    th:text="${aluno.dataNascimento}"></span></div>
+                                        </div>
+                                        <div class="col-auto">
+                                            <i class="fas fa-birthday-cake fa-2x text-gray-300"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-xl-3 col-md-6 mb-4">
+                            <div class="card border-left-success shadow h-100 py-2">
+                                <div class="card-body">
+                                    <div class="row no-gutters align-items-center">
+                                        <div class="col mr-2">
+                                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                                Sexo</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">
+
+                                                <span th:if="${aluno.sexo =='1'}">MASCULINO</span>
+                                                <span th:unless="${aluno.sexo == '2'}">FEMININO</span>
+                                            </div>
+                                        </div>
+                                        <div class="col-auto">
+                                            <i class="fas fa-venus-mars fa-2x text-gray-300"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <form th:action="@{/salvar-avaliacao}" th:object="${avaliacao}" method="POST">
+                        <div style="display: none">
+                            <input type="text" name="idAluno" id="idAluno" th:field="*{idAluno}" />
+                            <input type="number" name="idade" id="idade" th:field="*{idade}" />
+                            <input type="text" name="sexo" id="sexo" th:field="*{sexo}" />
+                        </div>
+
                         <div class="card ">
                             <div class="card-header"> Aluno </div>
 
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col-6">
-                                        <div class="form-group">
-                                            <label for="nome">Nome:</label>
-                                            <input type="text" name="nome" class="form form-control border"
-                                                th:value="*{nome}" />
-                                        </div>
-                                    </div>
-                                    <div class="col-2">
-                                        <label for="idade">Idade:</label>
-                                        <input id="idade" type="date" name="idade" class="form form-control border"
-                                            th:value="*{dataNascimento}" />
-                                    </div>
-                                    <div class="col-2">
+                                    <div class="col-4">
                                         <label for="massa">Peso:</label>
-                                        <input type="text" name="massa" id="massa"
-                                            class=" number form form-control border" placeholder="Peso" />
+                                        <input type="text" name="massa" id="massa" th:field="*{massa}"
+                                            class=" number form form-control border" placeholder="Peso" th:required="required" />
                                     </div>
-                                    <div class="col-2">
+                                    <div class="col-4">
                                         <label for="estatura">Estatura:</label>
-                                        <input type="text" name="estatura" placeholder="Estatura"
+                                        <input type="text" name="estatura" placeholder="Estatura" th:field="*{estatura}" th:required="required"
                                             class="number form form-control border" />
                                     </div>
                                 </div>
@@ -62,33 +117,33 @@
                                     <div class="col-2">
                                         <div class="form-group">
                                             <label for="peitoral">Peitoral:</label>
-                                            <input type="text" name="peitoral" placeholder="peitoral"
+                                            <input type="text" name="peitoral" placeholder="Peitoral" th:field="*{peitoral}" th:required="required"
                                                 class="number form form-control border" />
                                         </div>
                                     </div>
                                     <div class="col-2">
                                         <label for="mediaAuxiliar">Auxilar Média:</label>
-                                        <input id="mediaAuxiliar" type="text" name="mediaAuxiliar"
+                                        <input id="mediaAuxiliar" type="text" name="mediaAuxiliar" th:field="*{mediaAuxiliar}" th:required="required"
                                             placeholder="auxilar média" class="number form form-control border" />
                                     </div>
                                     <div class="col-2">
                                         <label for="subEscapular">Sub Escapular:</label>
-                                        <input type="text" name="subEscapular" id="subEscapular"
+                                        <input type="text" name="subEscapular" id="subEscapular" th:field="*{subEscapular}" th:required="required"
                                             class=" number form form-control border" placeholder="sub espacular" />
                                     </div>
                                     <div class="col-2">
                                         <label for="tricipital">Tricipital:</label>
-                                        <input type="text" name="tricipital" placeholder="tricipital"
+                                        <input type="text" name="tricipital" placeholder="tricipital" th:field="*{tricipital}" th:required="required"
                                             class="number form form-control border" />
                                     </div>
                                     <div class="col-2">
                                         <label for="biciptal">Biciptal:</label>
-                                        <input type="text" name="biciptal" placeholder="biciptal"
+                                        <input type="text" name="biciptal" placeholder="biciptal" th:field="*{biciptal}" th:required="required"
                                             class="number form form-control border" />
                                     </div>
                                     <div class="col-2">
                                         <label for="supraIliaca">SupraIliaca:</label>
-                                        <input type="text" name="supraIliaca" placeholder="supraIliaca"
+                                        <input type="text" name="supraIliaca" placeholder="supraIliaca" th:field="*{supraIliaca}" th:required="required"
                                             class="number form form-control border" />
                                     </div>
                                 </div>
@@ -96,17 +151,17 @@
                                 <div class="row">
                                     <div class="col-4 justify-content-md-center">
                                         <label for="abdominalDobra">Abdominal Dobra:</label>
-                                        <input type="text" name="abdominalDobra" placeholder="abdominal Dobra"
+                                        <input type="text" name="abdominalDobra" placeholder="abdominal Dobra" th:field="*{abdominalDobra}" th:required="required"
                                             class="number form form-control border" />
                                     </div>
                                     <div class="col-4 col-centered">
                                         <label for="coxa">Coxa:</label>
-                                        <input type="text" name="coxa" placeholder="coxa"
+                                        <input type="text" name="coxa" placeholder="coxa" th:field="*{coxa}" th:required="required"
                                             class="number form form-control border" />
                                     </div>
                                     <div class="col-4 justify-content-md-center">
                                         <label for="panturrilha">Panturrilha:</label>
-                                        <input type="text" name="panturrilha" placeholder="panturrilha"
+                                        <input type="text" name="panturrilha" placeholder="panturrilha" th:field="*{panturrilha}" th:required="required"
                                             class="number cent form form-control border" />
                                     </div>
                                 </div>
@@ -121,24 +176,24 @@
                                     <div class="col-3">
                                         <div class="form-group">
                                             <label for="torax">Torax:</label>
-                                            <input type="text" name="torax" placeholder="torax"
+                                            <input type="text" name="torax" placeholder="torax" th:field="*{torax}" th:required="required"
                                                 class="number form form-control border" />
                                         </div>
                                     </div>
                                     <div class="col-3">
                                         <label for="bracoDireito">Braço Direito</label>
-                                        <input id="bracoDireito" type="text" name="bracoDireito"
+                                        <input id="bracoDireito" type="text" name="bracoDireito" th:field="*{bracoDireito}" th:required="required"
                                             placeholder="braço direito" class="number form form-control border" />
                                     </div>
                                     <div class="col-3">
                                         <label for="bracoEsquerdo">Braço Esquerdo:</label>
-                                        <input type="text" name="bracoEsquerdo" id="bracoEsquerdo"
+                                        <input type="text" name="bracoEsquerdo" id="bracoEsquerdo" th:field="*{bracoEsquerdo}" th:required="required"
                                             class=" number form form-control border" placeholder="braço esquerdo" />
                                     </div>
 
                                     <div class="col-3 justify-content-md-center">
                                         <label for="antebracoEsquerdo">Antebraço Esquerdo:</label>
-                                        <input type="text" name="antebracoEsquerdo" placeholder="antebraço esquerdo"
+                                        <input type="text" name="antebracoEsquerdo" placeholder="antebraço esquerdo" th:field="*{antebracoEsquerdo}" th:required="required"
                                             class="number form form-control border" />
                                     </div>
 
@@ -147,22 +202,22 @@
                                 <div class="row">
                                     <div class="col-3 col-centered">
                                         <label for="abdominalPerimetro">Abdominal Perimetro:</label>
-                                        <input type="text" name="abdominalPerimetro" placeholder="abdominal"
+                                        <input type="text" name="abdominalPerimetro" placeholder="abdominal" th:field="*{abdominalPerimetro}" th:required="required"
                                             class="number form form-control border" />
                                     </div>
                                     <div class="col-3 justify-content-md-center">
                                         <label for="cintura">Cintura:</label>
-                                        <input type="text" name="cintura" placeholder="cintura"
+                                        <input type="text" name="cintura" placeholder="cintura" th:field="*{cintura}" th:required="required"
                                             class="number cent form form-control border" />
                                     </div>
                                     <div class="col-3 justify-content-md-center">
                                         <label for="quadril">Quadril:</label>
-                                        <input type="text" name="quadril" placeholder="quadril"
+                                        <input type="text" name="quadril" placeholder="quadril" th:field="*{quadril}" th:required="required"
                                             class="number cent form form-control border" />
                                     </div>
                                     <div class="col-3 justify-content-md-center">
                                         <label for="coxaDireita">Coxa Direita:</label>
-                                        <input type="text" name="coxaDireita" placeholder="coxa direita"
+                                        <input type="text" name="coxaDireita" placeholder="coxa direita" th:field="*{coxaDireita}" th:required="required"
                                             class="number cent form form-control border" />
                                     </div>
                                 </div>
@@ -170,17 +225,17 @@
                                 <div class="row">
                                     <div class="col-4 justify-content-md-center">
                                         <label for="coxaEsquerda">Coxa Esquerda:</label>
-                                        <input type="text" name="coxaEsquerda" placeholder="coxa esquerda"
+                                        <input type="text" name="coxaEsquerda" placeholder="coxa esquerda" th:field="*{coxaEsquerda}" th:required="required"
                                             class="number cent form form-control border" />
                                     </div>
                                     <div class="col-4">
                                         <label for="pernaDireita">Perna Direita:</label>
-                                        <input type="text" name="pernaDireita" placeholder="perna direita"
+                                        <input type="text" name="pernaDireita" placeholder="perna direita" th:field="*{pernaDireita}" th:required="required"
                                             class="number form form-control border" />
                                     </div>
                                     <div class="col-4">
                                         <label for="pernaEsquerda">Perna Esquerda:</label>
-                                        <input type="text" name="pernaEsquerda" placeholder="perna esquerda"
+                                        <input type="text" name="pernaEsquerda" placeholder="perna esquerda" th:field="*{pernaEsquerda}" th:required="required"
                                             class="number form form-control border" />
                                     </div>
                                 </div>
@@ -190,7 +245,8 @@
                         <div class="row">
                             <div class="col">
                                 <center>
-                                    <button type="submit" class="btn btn-success" style="margin: 10px">Realizar Avaliação</button>
+                                    <button type="submit" class="btn btn-success" style="margin: 10px">Realizar
+                                        Avaliação</button>
                                 </center>
                             </div>
                         </div>
@@ -208,6 +264,8 @@
             $('.number').mask('000.00', { reverse: true });
         });
 
+        $('.number').val('');
+        
     })(jQuery)
 </script>
 
