montando dashboard empresa

--- a/src/main/resources/templates/Avaliacao/Avaliacao.html
+++ b/src/main/resources/templates/Avaliacao/Avaliacao.html
@@ -165,6 +165,9 @@
                                 </a>
                                 <div class="collapse" id="collapseCardExample">
                                     <div class="card-body">
+                                        <th:block th:each="avaliacoes : ${avaliacoes}">
+                                            
+                                        </th:block>
                                     </div>
                                 </div>
                             </div>
